# szarp

./: .gitignore  AUTHORS  CMakeLists.txt  COMPILATION.Windows  COPYING  ChangeLog  ChangeLog.old  Doxyfile  INSTALL  INSTALL.ARM  INSTALL.Windows  INSTALL.wxWidgets.sh  INSTALL.wxWidgets.sh.tgz  LICENSE  Makefile.am  NEWS  NEWS.pl_PL  README  README.md  acinclude.m4  autogen.sh  build.sh  configure.ac  configure.in  coverage.sh  gpl-2.0-pl-win.txt  gpl-2.0-pl.txt  libtool  overall.dia  push.sh  snapcraft.yaml  unbuild.sh  version
cfgdealer/: .gitignore  CMakeLists.txt  Makefile.am  cfgdealer.cpp  cfgdealer.hpp  cfgdealer_test.cpp  main.cpp
iks/: CMakeLists.txt  Makefile.am
iks/client/: CMakeLists.txt  Makefile.am  iks_client.cpp  iks_client.h  iks_cmd_id.cpp  iks_cmd_id.h  iks_connection.cpp  iks_connection.h  iks_location_connection.cpp  iks_location_connection.h  sz4_connection_mgr.cpp  sz4_connection_mgr.h  sz4_iks.cpp  sz4_iks.h  sz4_iks_param_info.h  sz4_iks_param_observer.h  sz4_iks_templ.h  sz4_location_connection.cpp  sz4_location_connection.h  tcp_client_socket.cpp  tcp_client_socket.h
iks/common/: CMakeLists.txt  Makefile.am
iks/server/: .gitignore  CMakeLists.txt  Makefile.am  daemon.cpp  daemon.h  global_service.cpp  iks-server.ini.sample  iks.ini.sample  main.cpp
libSzarp/: CMakeLists.txt  Makefile.am  argsmgr.cpp  async_log_test.c  async_syslog.c  cmdlineparser.cpp  config.h.cmake  conversion.cc  daemon.cc  date.cc  execute.cc  help.cc  ipctools.cc  liblog.cc  liblog.cpp  liblog_impl_asyslog.cc  liblog_impl_classic.cc  liblog_impl_syslog.cc  libparnt.cc  libparnt.lex  libparnt.parse.cc  libparnt.yy.cc  loghandlers.cpp  mbrtu.cc  mingw32_missing.cc  msgerror.cc  msgtools.cc  passwd.cc
libSzarp/include/: argsmgr.h  cmdlineparser.h  conversion.h  daemon.h  date.h  execute.h  help.h  ipcdefines.h  ipctools.h  libXs.h  liblog.h  liblog_impl_asyslog.h  liblog_impl_classic.h  liblog_impl_syslog.h  libpar.h  libpar_int.h  libparnt.parse.h  loghandlers.h  mbrtu.h  mingw32_missing.h  modbus.h  msgerror.h  msgtools.h  msgtypes.h  names.h  passwd.h  szarp.h  szdefines.h
libSzarp2/: CMakeLists.txt  Doxyfile  Makefile.am
libSzarp2/include/: async_syslog.h  atcconn.h  base64.h  base_daemon.h  baseconn.h  bserialport.h  compat.h  compiler.h  config_info.h  convuri.h  crontime.h  custom_assert.h  daemonize.h  daemonutils.h  definable_parser.h  dmncfg.h  ekrncor.h  evbase.h  exception.h  httpcl.h  httpclient.h  insort.h  integrator.h  interface_wrapper.h  ipchandler.h  ipkcontainer.h  line_cfg.h  log_prefix.h  mbus.h  (+18 more)
meaner3/: .gitignore  CMakeLists.txt  Makefile.am  classes.h  fileremover.cc  fileremover.h  meaner3.cc  meaner3.h  prober.cc  prober.h  texecalarm.cc  texecalarm.h  texecsect.cc  texecsect.h  texecute.cc  texecute.h  tmeaner.cc  tmeaner.h  tparcook.cc  tparcook.h  tprober.cc  tprober.h  tsaveparam.cc  tsaveparam.h  tstatus.cc  tstatus.h  twriter.cc  twriter.h
parcook/: .defdmn.h.swn  .gitignore  CMakeLists.txt  Makefile.am  README  alstdmn.cc  aqtdmn.cc  base_daemon.cc  base_daemon.h  basedmn.cc  basedmn.h  boruta_fc.cc  boruta_fc_z.cc  boruta_fp210.cc  boruta_lumel.cc  boruta_modbus.cc  boruta_modbus_z.cc  boruta_wmtp.cc  boruta_zet.cc  borutadmn.cc  borutadmn.h  borutadmn_z.cc  borutadmn_z.h  calcdmn.cc  calecdmn.cc  cfgdealer_handler.cpp  cfgdealer_handler.h  cmdlineparser.cpp  cmdlineparser.h  dbdmn.cc  ddedmn.cc  defdmn.cc  defdmn.h  defdmn.tpp  dlmsdmn.cc  dpafdmn.cc  dprdmn.cc  eapnet-prop-plugin.h  eapnetdmn.cc  endmn.cc  (+56 more)
pyipk/: .gitignore  Makefile.am  cmdline.sh  gui.sh  setup.py  test.sh
resources/: .gitignore  CMakeLists.txt  DATAPAF_CFG_TEMPLATE  FP2001_CFG_TEMPLATE  LANDISZMD_CFG_TEMPLATE  Makefile.am  SZARP_CFG_TEMPLATE  SZARP_IN_CFG_TEMPLATE  \  cor.vim  definable.vim  dictionary.xml  dsc.vim  elog.vim  filler2.desktop  iks-server.conf  koper.desktop  libpar.vim  logrotate_szarp  meteo_template.xml  paramd_access.conf  parcook.vim  parstart_TEMPLATE  parstart_cfg_TEMPLATE  ptt.vim  rap.vim  rsyslog.conf  rsyslog_conf_TEMPLATE  scc.desktop  ssc.desktop  sysctl_conf_TEMPLATE  szarp-wx.supp  szarp.vim  unifier.xml
script/: CMakeLists.txt  Makefile.am  change-tex-pl-entities.sh  change-tex-pl-entities2.sh  chroot_dist.sh  config_deb  csv2p.py  dmn2sgml.py  editval.py  get_mki.sh  get_mki2.sh  get_mki_1.sh  get_mki_2.sh  get_mki_3.sh  get_mki_4.sh  get_sysinfo  install_vim  insum.sh  make_dist.sh  meteoprog.py  p2csv.py  po2xml.py  set2params.py  sgml2hlpctrl.pl  sshkey  sysinfo.in  szarp-server.cron  szarp-sss.cron  szbchecknames.py  szbskeleton.py  szbwgen.py  treenodes.py  update_debs  update_ssuserdb.sh  version-info  windist.sh
sender/: CMakeLists.txt  Makefile.am  nruler.c  ruler.c  sender.cc  sender.h
unit_tests/: .gitignore  CMakeLists.txt  Makefile.am  argsmgr_test.cpp  base_param_converter_unit_test.cpp  cfgdealer_test.cpp  cmdlineparser_test.cpp  conversion_test.cpp  filelogger_test.cpp  integrator.cpp  ipkcontainer_test.cpp  libpar_test.cfg  loghandler_test.cpp  parhublistener_test.cpp  simple_mocks.h  sz4_base_test.cpp  sz4_block_unit_test.cpp  sz4_buffer_unit_test.cpp  sz4_combined_param.cpp  sz4_decode_test.cpp  sz4_definable_param.cpp  sz4_definable_param_cache.cpp  sz4_extr_simple.cpp  sz4_factory_test.cpp  sz4_file_search.cpp  sz4_live_cache.cpp  sz4_lua_param.cpp  sz4_lua_param_optimized.cpp  sz4_wsum.cpp  szb_param_monitor_unit_test.cpp  test_observer.cpp  test_observer.h  test_serach_condition.h  unit_test_common.cpp  unit_test_common.h  unit_tests.cpp  zmq_handler_test.cpp
utils/: .gitignore  CMakeLists.txt  Makefile.am  agregator.cc  analiza2ipk.cc  analiza_create.c  conf-get.sh  conf-import.py  conf-put.sh  crypt.c  ddespy.py  fdcp  fromdisk.sh  get_weather.sh  i2smo  ipcclean  ipk2szarp.cc  ipkmax.cc  ipkrep.cc  isdn-down.sh  isdn-up-in.sh  isdn-up-out.sh  isdn_pooler.sh  lpparse.cc  modem_pooler.sh  ondisk.sh  precconv.cc  raporter.py  raprec  rsync_wrap.pl  semvals.c  sendnex.c  sortlog  sproxy.c  ssh_tunel.sh  stampd.c  szarp_scripter  szarpinfo.in  szbpush  szbpush4  (+10 more)
wx/: CMakeLists.txt  Makefile.am
(+1589 files in other folders)
